# Workshop

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  install_dependencies.bat
cmake/: FindIndiaEngine.cmake
dependencies/IndiaEngine/debug/include/: ActiveSceneComponent.h  ActiveSceneSystem.h  BackgroundComponent.h  BaseNetworkManager.h  BuildSettings.h  BuildSettingsStruct.h  ClientManager.h  Color.h  Components.h  CustomProperties.h  DrawingFacade.h  EntryPoint.h  Event.h  FileManager.h  India.h  IndiaEngine.h  InputFacade.h  InputKeyTranslatorSDL.h  InputStruct.h  InputSystem.h  Layer.h  Manager.h  Managers.h  MapLoader.h  MapScene.h  NetworkManager.h  Object.h  ObjectManager.h  ObjectSystem.h  PhysicsSystem.h  Sprite.h  Text.h  ThreadPool.h  TiledObjectFactory.h  Utilities.h  VelocityComponent.h  VelocitySystem.h
dependencies/IndiaEngine/release/docs/html/: _active_scene_component_8cpp.html  _active_scene_component_8cpp__incl.map  _active_scene_component_8cpp__incl.md5  _active_scene_component_8h.html  _active_scene_component_8h__dep__incl.map  _active_scene_component_8h__dep__incl.md5  _active_scene_component_8h__incl.map  _active_scene_component_8h__incl.md5  _active_scene_component_8h_source.html  _active_scene_system_8cpp.html  _active_scene_system_8cpp__incl.map  _active_scene_system_8cpp__incl.md5  _active_scene_system_8h.html  _active_scene_system_8h__dep__incl.map  _active_scene_system_8h__dep__incl.md5  _active_scene_system_8h__incl.map  _active_scene_system_8h__incl.md5  _active_scene_system_8h_source.html  _audio_manager_8cpp.html  _audio_manager_8cpp__incl.map  _audio_manager_8cpp__incl.md5  _audio_manager_8h.html  _audio_manager_8h__dep__incl.map  _audio_manager_8h__dep__incl.md5  _audio_manager_8h__incl.map  _audio_manager_8h__incl.md5  _audio_manager_8h_source.html  _background_component_8cpp.html  _background_component_8cpp__incl.map  _background_component_8cpp__incl.md5  _background_component_8h.html  _background_component_8h__dep__incl.map  _background_component_8h__incl.map  (+1800 more)
dependencies/IndiaEngine/release/include/: AudioManager.h  BoxCollider.h  Button.h  CameraComponent.h  CameraSystem.h  ClientManager.h  Collider.h  CollisionComponent.h  CollisionSystem.h  Component.h  Core.h  EntryPoint.h  Exceptions.h  GameLoop.h  GameObject.h  GameTime.h  Graphics2D.h  GuiObject.h  IndiaEngine.h  IndiaEvent.h  InputComponent.h  InputEvent.h  LevelObject.h  LevelProperty.h  LevelText.h  ManagerPool.h  Map.h  NetworkManager.h  NetworkPacket.h  ObjectLayer.h  ObjectQuadTree.h  Objects.h  PhysicsComponent.h  PhysicsObject.h  Scene.h  SceneManager.h  SceneSystem.h  Shapes.h  Singleton.h  SpriteComponent.h  (+7 more)
dependencies/IndiaEngine/release/lib/: IndiaEngine.lib
docs/: Doxyfile.cfg  Doxygen.html  Tiled.md
include/: Character.h  CollisionHandlers.h  Door.h  Enemy.h  EnemySpawnPoint.h  ExampleScene.h  Fps.h  GameOver.h  GameOverHUD.h  GuiScene.h  HUD.h  Level.h  Score.h  Wave.h
rc/: Icon.aps  Icon.rc  resource.h
resources/levels/: Cave building assets.json  Cave overworld.json  Clouds.json  FloatingPlatform2.json  Map1 cave.json  Map1 overworld.json  Map1_overworld.json  Overworld.json  Trees.json  level.json  level1.json  level_layout.json
resources/levels/tilesets/: Enemy Spawn Point.json  background.json
resources/levels/tilesets/1/: Dungeon Entrance.json  bg tree.json  platformer fantasy 1 dec.json  platformer fantasy 1.json
src/: Character.cpp  CollisionHandlers.cpp  Door.cpp  Enemy.cpp  EnemySpawnPoint.cpp  ExampleScene.cpp  Executable.cpp  Fps.cpp  GameOver.cpp  GameOverHUD.cpp  GuiScene.cpp  HUD.cpp  Level.cpp  Score.cpp  Wave.cpp
(+140 files in other folders)
